# OpenLMlib

./: .gitignore  CAVEMAN_IMPLEMENTATION_SUMMARY.md  CAVEMAN_INTEGRATION_PLAN.md  CHANGELOG.md  CLI_MCP_GLOBAL_CONFIG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  MEMORY_IMPLEMENTATION_SUMMARY.md  MEMORY_INJECTION_ANALYSIS.md  MEMORY_QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  refactor_mcp.py  refactor_mcp_2.py  rename_script.py  requirements.txt  test_mem_tools.py
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/prompts/: collab_sessions_plan_v2.md  plan-lmlib.prompt.md
.github/workflows/: ci.yml  prune-deployments.yml  release.yml
config/: eval_queries.json  settings.json
docs/: COLLAB_SESSIONS.md  MCP_CLI_INTEGRATION_RESEARCH.md  MCP_TOOLS.md  MCP_TOOL_OPTIMIZATION_PROGRESS.md  MEMORY_QUICKSTART.md  README.md  SYSTEM_PROMPT.md  collaboration_optimization_plan.md  natural_tool_use_optimization.md
examples/: collab_session_example.py
installer/: README.md  bundle-python.js  package.json  test-install.js  verify-tools.cmd
installer/src/: cli.js  install.js  postinstall.mjs  python-install.js  run-setup.mjs
installer/src/ui/: app.js  checks.js  complete.js  progress.js  setup-wizard.js  welcome.js  wizard.js
lmlib/: __init__.py  cli.py  db.py  embeddings.py  library.py  mcp_server.py  retrieval.py  sanitization.py  settings.py  vector_store.py
openlmlib/: __init__.py  cli.py  db.py  decomposition.py  embeddings.py  evaluation.py  file_lock.py  library.py  maintenance.py  mcp_server.py  mcp_setup.py  packing.py  query_expansion.py  reranking.py  retrieval.py  runtime.py  sanitization.py  schema.py  settings.py  summary_gen.py  tui_setup.py  usage_analytics.py  vector_store.py  write_gate.py
openlmlib/collab/: README.md  __init__.py  artifact_store.py  collab_mcp.py  collab_tui.py  compactor.py  context_compiler.py  db.py  errors.py  export_bridge.py  message_bus.py  multi_session.py  notification.py  openrouter_client.py  prompts.py  rules_engine.py  security.py  session.py  state_manager.py  templates.py
openlmlib/memory/: __init__.py  caveman_compress.py  compressor.py  context_builder.py  hooks.py  knowledge_extractor.py  memory_retriever.py  observation_queue.py  privacy.py  retrogit_ingest.py  session_manager.py  storage.py
scripts/: check_mcp_config.py  count_mcp_tools.py  diagnose_mcp_tools.py  fix-npm-pack-tools.md  log_session_memory.py  test_knowledge_recap.py  test_memory_retrieval.py  test_memory_workflow.py  test_retroactive_ingest.py
tests/: bench_collab.py  bench_mcp_tools.py  test_backup_restore.py  test_caveman_compress.py  test_cli.py  test_collab.py  test_collab_integration.py  test_collab_live.py  test_decomposition.py  test_evaluation.py  test_health.py  test_mcp_setup.py  test_memory_injection.py  test_packing.py  test_query_expansion.py  test_reranking.py  test_retrieval.py  test_sanitization.py  test_schema.py  test_storage.py  test_write_gate.py
