[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlmlib"
version = "0.1.1rc2"
description = "Local cross-project knowledge and research library for LLM workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenLMlib Contributors" }
]
dependencies = [
  "numpy>=1.23",
  "mcp>=1.0.0",
  "sentence-transformers>=2.2",
  "rich>=12.0.0"
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7.4"]

[project.scripts]
openlmlib = "openlmlib.cli:main"
openlmlib-mcp = "openlmlib.mcp_server:main"

[tool.setuptools]
packages = ["openlmlib"]
